force-app/main/default/objects/Campaign/fields/Available_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Available_Capacity__c</fullName>
    <description>Calculate the available capacity of an event by subtracting the number of confirmed attendees from the maximum capacity of the event. This field is automatically updated whenever the number of confirmed attendees in the associated campaign changes, providing a clear view of how many spots are available for new participants.</description>
    <formula>Maximum_Capacity__c - Confirmed_Attendees__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Capacity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>