force-app/main/default/objects/Campaign/fields/Confirmed_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Attendees__c</fullName>
    <label>Confirmed Attendees.</label>
    <summaryFilterItems>
        <field>Registration_Form__c.Registration_Status__c</field>
        <operation>equals</operation>
        <value>Accepted</value>
    </summaryFilterItems>
    <summaryForeignKey>Registration_Form__c.Event__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>