force-app/main/default/objects/Campaign/fields/Event_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_Date__c</fullName>
    <description>Date and Time when the event will start.</description>
    <label>Event Date</label>
    <type>DateTime</type>
</CustomField>