force-app/main/default/objects/Campaign/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <description>Type of the event, it shows if it&apos;s online or in-person.</description>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>In-person</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>