force-app/main/default/objects/Campaign/fields/Is_Today_Event__c.field-meta.xml
<CustomField>
    <fullName>Is_Today_Event__c</fullName>
    <description>Indicates whether the scheduled event coincides with the current date.</description>
    <formula>TODAY() = DATEVALUE(Event_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Today Event</label>
    <type>Checkbox</type>
</CustomField>