force-app/main/default/objects/Campaign/fields/Is_Today_Event_c__c.field-meta.xml
<CustomField>
    <fullName>Is_Today_Event_c__c</fullName>
    <description>A</description>
    <formula>TODAY() = DATEVALUE(Event_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Today Event?</label>
    <type>Checkbox</type>
</CustomField>