force-app/main/default/objects/Campaign/fields/Maximum_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Capacity__c</fullName>
    <description>Maximum capacity for the event.</description>
    <label>Maximum Capacity</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>