force-app/main/default/objects/Campaign/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <description>URL for the event. (Only for online events).</description>
    <label>URL</label>
    <type>Url</type>
</CustomField>