force-app/main/default/objects/Campaign/validationRules/Capacity_Reached.validationRule-meta.xml
<ValidationRule>
    <fullName>Capacity_Reached</fullName>
    <active>false</active>
    <description>Prevents new registrations once the event reaches its maximum available capacity.</description>
    <errorConditionFormula>Available_Capacity__c &lt;= 0</errorConditionFormula>
    <errorMessage>The event has already reached its maximum capacity and cannot accept any more registrations.</errorMessage>
</ValidationRule>